--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
         <link rel="icon" type="image/png" sizes="16x16" href="/Payment-expo/favicon-16.png" />
         <link rel="icon" type="image/png" sizes="32x32" href="/Payment-expo/favicon-32.png" />
         <link rel="shortcut icon" href="/Payment-expo/favicon.ico" />
+        <script type="text/javascript" src="https://cdn.iamport.kr/js/iamport.payment-1.1.5.js"></script>
+        <script type="text/javascript" src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
         <meta name="mobile-web-app-capable" content="yes" />
         <meta name="apple-mobile-web-app-capable" content="yes" />
         <meta name="apple-touch-fullscreen" content="yes" />
@@ -144,7 +146,7 @@
         >
         <div id="root"></div>
         <script src="/Payment-expo/static/js/runtime~app.080b1abb.js"></script>
-        <script src="/Payment-expo/static/js/2.8b1273ed.chunk.js"></script>
-        <script src="/Payment-expo/static/js/app.dea84f0e.chunk.js"></script>
+        <script src="/Payment-expo/static/js/2.4582bc07.chunk.js"></script>
+        <script src="/Payment-expo/static/js/app.c1a651e9.chunk.js"></script>
     </body>
 </html>
