--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                 </div>
             </form></noscript
         >
-        <!-- <div id="root"></div> -->
+        <div id="root"></div>
         <script src="/Payment-expo/static/js/runtime~app.080b1abb.js"></script>
         <script src="/Payment-expo/static/js/2.4582bc07.chunk.js"></script>
         <script src="/Payment-expo/static/js/app.9f1008f6.chunk.js"></script>
