--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
         <meta name="apple-touch-fullscreen" content="yes" />
         <meta name="apple-mobile-web-app-title" content="payment-web-project" />
         <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+        <script type="text/javascript" src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
+        <script type="text/javascript" src="https://cdn.iamport.kr/js/iamport.payment-1.1.5.js"></script>
         <link
             rel="apple-touch-icon"
             sizes="180x180"
@@ -144,7 +146,7 @@
         >
         <div id="root"></div>
         <script src="/Payment-expo/static/js/runtime~app.080b1abb.js"></script>
-        <script src="/Payment-expo/static/js/2.4582bc07.chunk.js"></script>
-        <script src="/Payment-expo/static/js/app.9f1008f6.chunk.js"></script>
+        <script src="/Payment-expo/static/js/2.ddb67640.chunk.js"></script>
+        <script src="/Payment-expo/static/js/app.95db663b.chunk.js"></script>
     </body>
 </html>
